Support for Basic Auth in apps
